--- a/style.css
+++ b/style.css
@@ -1,5 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+html {
+    font-family: 'Roboto', sans-serif;
+}
+
+#container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+} 
+
+a:visited {
+    color: white;
+}
+
+#side {
+    /* border: 2px solid green; */
+    height: 100vh;
+    overflow: hidden;
+    font-family: 'Skranji', 'Roboto', sans-serif;
+    color: white;
+}
+
+#side img {
+    width: 100%;
+    height: 100%;
+}
+
+#side p {
+    position: relative;
+    bottom: 30px;
+    left: 0;
+    text-align: center;
+}
+
+#logo {
+    background-color: rgba(0, 0, 0, 40%);
+    /* border: 2px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    top: -900px;
+    /* left: 50px; */
+}
+
+#logo img {
+    width: 40%;
+}
+
+#odin {
+    font-size: 6rem;
 }
